# scrapping-yp

./: .gitignore  README.md  pyproject.toml  response.json
src/: app.py
src/api/: __init__.py  endpoints.py  models.py
src/data_export/: __init__.py  db.py
src/utils/: __init__.py  commons.py  configs.py  logging.py  wrappers.py
src/yp_scrapper/: __init__.py  driver.py  yp.py
src/yp_scrapper/data_export/: db.py
