[tool.poetry]
name = "scrapping-yp"
version = "0.1.0"
description = "scrapping yp and extract nessary info"
authors = ["bakrfrag"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
pandas = "^2.2.2"
selenium = "^4.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
